# sci-stapler

./: .env.example  .gitignore  IMPLEMENTATION_PACKET.md  README.md  pyproject.toml
docs/showpieces/: mcp-cortex-capability-profiles.md
src/agentmedq/: __init__.py  __main__.py  cache.py  config.py  cortex.py  models.py  rate_limiter.py  retriever.py  server.py  tools.py
src/agentmedq/fetch/: __init__.py  arxiv.py  base.py  biorxiv.py  pmc.py
src/agentmedq/search/: __init__.py  arxiv_api.py  base.py  europe_pmc.py  ncbi.py  openalex.py
tests/: conftest.py  test_cache.py  test_config.py  test_cortex.py  test_fetch_providers.py  test_integration.py  test_models.py  test_provider_coverage.py  test_rate_limiter.py  test_retriever.py  test_retriever_coverage.py  test_search_providers.py  test_server.py  test_tools.py  test_tools_integration.py  test_tools_unit.py
