[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmedq"
version = "0.1.0"
description = "MCP server for agentic biomedical literature search across bioRxiv, medRxiv, PMC, arXiv, and OpenAlex"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.20.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
]

[project.scripts]
agentmedq = "agentmedq.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentmedq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that hit real APIs (may be flaky due to rate limits)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
